# pebble-shell

./: .env.example  .gitignore  AGENTS.md  Dockerfile  MEMORY.md  README.md  SKILLS.md  SOUL.md  TOOLS.md  docker-compose.yml  install  pyproject.toml
context/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md  WORKER_TOOLS.md
docs/: install-bare-metal.md  install-docker.md  toolcalls_human.md
opencode_agent/: __main__.py  agent.py  background_tasks.py  config.py  cron.py  discord_bot.py  discord_dm.py  discord_interactions.py  exa_search.py  exec_policy.py  heartbeat.py  memory.py  process_manager.py  public_sites.py  runtime_config.py  schemas.py  self_improvement.py  server.py  skills.py  tools.py
pebble_shell/: __init__.py  __main__.py  agent.py  attachments.py  background_tasks.py  cli.py  config.py  context_files.py  cron.py  discord_bot.py  discord_interactions.py  discord_register.py  event_hooks.py  exa_search.py  heartbeat.py  images.py  memory.py  process_manager.py  runtime_config.py  schemas.py  self_improvement.py  server.py  shell_audit.py  skills.py  tools.py
skills/: humanizer.md
tests/: conftest.py  test_attachments.py  test_auth.py  test_background_tasks.py  test_cli.py  test_context_compaction.py  test_context_files.py  test_cron.py  test_discord_bot.py  test_discord_dm.py  test_discord_interactions.py  test_discord_register.py  test_event_hooks.py  test_exec_policy.py  test_heartbeat.py  test_images.py  test_initial_dm.py  test_long_horizon_scenarios.py  test_memory.py  test_model_calls.py  test_model_fallback.py  test_onboarding.py  test_runtime_config.py  test_self_improvement.py  test_server.py  test_shell_audit.py  (+3 more)
