[project]
name = "pebble-shell"
version = "0.0.1"
description = "Docker-isolated Discord-compatible coding agent with OpenAI-compatible model support."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "fastapi>=0.115.0",
    "openai>=1.55.0",
    "playwright>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "PyNaCl>=1.5.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
pebble-shell-discord-register = "pebble_shell.discord_register:main"
pebble-shell-discord-dm = "pebble_shell.discord_dm:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["pebble_shell*"]
